# diploma-thesis

./: .gitignore  LICENSE  PM_model_training.ipynb  pyproject.toml  simple_rl_env_testing.ipynb  simulation.py  strategy.py  timeseries_analysis.ipynb
exp_results/task_complexity_increasing/discrete_env_15ind/: apex_dqn_config  ppo_experiment_config  r2d2_experiment_config  sac_config
notebooks/: Data preprocessing.ipynb  [Evaluation] Long experiment evaluation.ipynb  [Experiment] Algorithm overfit on short period.ipynb  [Experiment] Backtrader evaluation.ipynb  [Experiment] Continuous env.ipynb  [Experiment] Live trading.ipynb  market_simulation.ipynb  policy evaluation.ipynb  ray_playground.ipynb  simple_rl_env_testing.ipynb  talib_playground.ipynb  tensorboard_summarize.ipynb
rl_trading/: cartpole_test.py  enums.py  run_baseline.py  run_experiment.py  run_live_trading.py  utils.py
rl_trading/data/: api.py  indicators.py  provider.py
rl_trading/simulation/: __init__.py  env.py
rl_trading/strategy/: agent.py  analyzers.py  sizer.py  strategy.py
tests/integration/data/: test_api.py
tests/unit/data/: test_api.py
