[tool.poetry]
name = "rl_trading"
version = "0.0.1"
description = "Crypto trading using reinforcement learning"
authors = ["Pavel Mikulas <pavel.mikulas@protonmail.com>"]

[tool.poetry.dependencies]
python = "~3.10.0"
tqdm = "4.65.0"
pandas = "2.0.1"
numpy = "1.24.3"
matplotlib = "3.7.1"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"